tests/fixtures/invalid/sorted_float.py
# Cannot call sorted() with Float
x = sorted(1.0)
